--- a/style.css
+++ b/style.css
@@ -588,7 +588,7 @@ input:focus, select:focus {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: #5367E3;
+  background-color: #8390e4;
   color: white;
   display: flex;
   align-items: center;
